// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. error state if a component throws an error 1`] = `
<div>
  Error: an error occurred
</div>
`;

exports[`2. error state if a component invokes an error 1`] = `
<div>
  Error: some error
</div>
`;

exports[`3. good state if there is no error 1`] = `
<div>
  All good
</div>
`;
